<resources>
    <string name="app_name">Bloockgle</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="ABOUTUS">ABOUT US</string>
    <string name="PAYMENT">PAYMENT</string>

    <string name="you_have_to_pay">You have to pay <b>%1$s</b> for uploading <b>%2$s</b></string>
    <string name="titleLine">Title</string>

    <string name="add">Add file</string>
    <string name="textview">It is necessary to make a payment for the information is recorded in the BlockChain. This payment depends on what occupies that information that is indexed.</string>
    <string name="textview1">When payment is received this publication done automatically.</string>
    <string name="textview2">X2fdAasSsixubiUBub0823jsaoon</string>
    <string name="textview3">Received (btc):</string>
    <string name="textview4">0,01 / 0,03</string>

    <string name="whatisblockgle">What is Bloockgle?</string>
    <string name="whatisblockgle1">Bloockgle is the ultimate tool for making publications in the network.</string>
    <string name="whatisblockgle2">Each time you do an insert, the information is stored in the
        largest and most secure database in the world, the BlockChain. Created
        to be used for the Bitcoin, one of the greatest alternatives to
        create a system of economic different.
        BlockChain is a decentralized system spread all over the
        world, publications that are made on the are permanent, not
can be modified or deleted by any person, entity or
set of the same.</string>

    <string name="whoweare">Who we are?</string>
    <string name="whoweareentropy">We are Entropy Factory.</string>
    <string name="whoweareentropy1">We are a community of people linked with the virtual world that lives in a rural environment.</string>
    <string name="whoweareentropy2">Our goal is to improve the world, developing tools that meet real needs, avoiding at the same time of the socio economic and tax and is presumed to be real.</string>
    <string name="whoweareentropy3">www.entropy-factory.com</string>
    <string name="publish_dialopg_title">Sending request</string>
    <string name="publish_dialog_message">Sending request. Please, wait…</string>
    <string name="loading">Loading…</string>
    <string name="published">Just perfect! We have received the payment. Your data will be published in a few minutes.</string>
    <string name="see_more">See more</string>
    <string name="title_activity_published">Published!</string>
    <string name="title_activity_post">Publish</string>
    <string name="title">Title</string>
    <string name="text_publication">Text/Publication</string>
    <string name="address_wallet_donations">Add wallet address for donations</string>
    <string name="details">Details:</string>
    <string name="transactions_in_blockchain">Transactions in blockchain:</string>
    <string name="reference">Reference:</string>
    <string name="tx_hash_copied">Transaction hash copied!</string>
    <string name="donate">Donate</string>
    <string name="copy_address">Copy address</string>
    <string name="btc_address_copied">Bitcoin address copied!</string>
    <string name="about">About</string>
    <string name="no_data">Not found publications</string>

</resources>