<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.18"
                android:layout_gravity="center"
                android:src="@drawable/header" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.06"
            android:orientation="horizontal"
            android:background="#662481">

            <ImageButton
                android:background="@color/transparent_color"
                android:id="@+id/arrawpayment"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.15"
                android:src="@drawable/ic_arrow_back"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.60"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="ABOUT"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textSize="15sp"/>

            <ImageButton
                android:background="@color/transparent_color"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.15"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:background="@color/gris"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.7"
                        android:orientation="vertical"
                        android:padding="16dp"
                        android:background="#ffffff">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/whatisblockgle"
                            android:textSize="16sp"
                            android:textColor="#6F6F6E"
                            android:textStyle="bold"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="5dp"
                            android:background="#000000"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="#6F6F6E"
                            android:text="@string/whatisblockgle1"
                            android:layout_marginTop="12dp"
                            android:textSize="16sp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/whatisblockgle2"
                            android:layout_marginTop="10dp"
                            android:textColor="#6F6F6E"
                            android:textSize="16sp"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:background="@drawable/network_aout"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/whoweare"
                            android:textSize="16sp"
                            android:textColor="#6F6F6E"
                            android:textStyle="bold"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="5dp"
                            android:background="#000000"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/whoweareentropy"
                            android:layout_marginTop="12dp"
                            android:textColor="#6F6F6E"
                            android:textStyle="bold"
                            android:textSize="16sp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="#6F6F6E"
                            android:text="@string/whoweareentropy1"
                            android:layout_marginTop="10dp"
                            android:textSize="16sp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="#6F6F6E"
                            android:text="@string/whoweareentropy2"
                            android:layout_marginTop="10dp"
                            android:textSize="16sp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/whoweareentropy3"
                            android:layout_marginTop="10dp"
                            android:textStyle="bold"
                            android:textSize="16sp"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:background="@drawable/entropy"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="10dp"/>

                    </LinearLayout>

                    <Button
                        android:id="@+id/donate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@color/green"
                        android:textColor="#ffffff"
                        android:textStyle="bold"
                        android:text="DONATE"/>

                </LinearLayout>

            </ScrollView>

            <ImageButton
                android:id="@+id/btnpublish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_publish"
                android:layout_gravity="right"
                android:layout_marginRight="30dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="40dp"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>


