<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/header"
            android:layout_weight="0.18"
            android:orientation="vertical"
            android:paddingLeft="80dp"
            android:paddingRight="80dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.06"
            android:orientation="horizontal"
            android:background="@drawable/gradient_background">

            <ImageButton
                android:background="@color/transparent_color"
                android:id="@+id/arrawpayment"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.15"
                android:src="@drawable/ic_arrow_back"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.60"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/title_activity_published"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textSize="15sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.15"
                android:src="#662481"/>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:background="#ececec"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:id="@+id/detail_layout">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reference"
                        android:textColor="@color/violet"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:paddingBottom="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="New Text"
                        android:id="@+id/reference"
                        android:textColor="@color/violet"
                        android:textSize="16dp"
                        android:paddingLeft="3dp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transactions_in_blockchain"
                    android:textSize="16dp"
                    android:textColor="@color/violet"
                    android:textStyle="bold"
                    android:paddingBottom="10dp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>